--- a/fr_method/fr_demo_2b.ipynb
+++ b/fr_method/fr_demo_2b.ipynb
@@ -69,12 +69,8 @@
     "init_p1 = np.array([0., 0., 0.])\n",
     "init_p2 = np.array([3.0, 0., 0.])\n",
     "\n",
-    "spring_constant_pull = 50\n",
-    "\n",
-    "ang_vel_conversion = 100  # convert ang vel to radian / timestep \n",
-    "\n",
     "# thermo parameters\n",
-    "T = 10             # K\n",
+    "T = 10              # K\n",
     "kb = 0.00831446262  # kJ/mol/K\n",
     "kT = kb*T\n",
     "tau = 10.0 * dt\n",
@@ -91,6 +87,8 @@
     "eq_steps = 50_000\n",
     "seed = 1000\n",
     "segment = 10_000\n",
+    "\n",
+    "spring_constant_pull = 50\n",
     "pull_velocity = -1.0E-5\n",
     "pull_direction = np.array([1.0, 0.0, 0.0])\n",
     "dt *= TIME_CONVERSION\n",
@@ -393,7 +391,7 @@
     "fig, ax = plt.subplots(1, 2, sharey=True, figsize=(3, 2))\n",
     "ax[0].scatter(pmf-pmf[0], pmf_fit, color=\"k\", alpha=0.2)\n",
     "ax[0].plot([-1, 1], [-1, 1], color=\"r\", transform=ax[0].transAxes, label=\"x=y\")\n",
-    "ax[0].set_xlabel(r\"$W_\\mathrm{2B}$\")\n",
+    "ax[0].set_xlabel(r\"$W_\\mathrm{2B, ground truth}$\")\n",
     "ax[0].set_ylabel(r\"$W_\\mathrm{2B, ChIMES}$\")\n",
     "ax[0].legend()\n",
     "ax[1].plot(distance, pmf-pmf[0], label=r\"$W_\\mathrm{2B}$\")\n",
