Enhance the documentation

--- a/fr_method/fr_demo_3b.ipynb
+++ b/fr_method/fr_demo_3b.ipynb
@@ -56,6 +56,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulation parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -97,6 +104,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create initial snapshot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -113,6 +127,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -122,6 +143,13 @@
     "sim = hoomd.Simulation(device=device, seed=seed)\n",
     "sim.timestep = 0\n",
     "sim.create_state_from_snapshot(snapshot)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add LJ potential"
    ]
   },
   {
@@ -138,6 +166,13 @@
     "lj.r_cut[('A', 'A')] = r_cut\n",
     "\n",
     "forces.append(lj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add three-body SMD module"
    ]
   },
   {
@@ -163,6 +198,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NVT ensemble"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -175,12 +217,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MD integrator"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "integrator = hoomd.md.Integrator(\n",
     "    dt=dt,\n",
     "    methods=[ensemble],\n",
@@ -188,6 +236,13 @@
     "    integrate_rotational_dof=False\n",
     ")\n",
     "sim.operations += integrator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output files"
    ]
   },
   {
@@ -219,6 +274,13 @@
     "\n",
     "sim.state.thermalize_particle_momenta(filter=hoomd.filter.All(), kT=kT)\n",
     "sim.operations += hoomd.md.update.ZeroMomentum(hoomd.trigger.On(0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run simulation"
    ]
   },
   {
@@ -377,8 +439,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In theory, LJ particles shouldn't possess three-body interaction which is the orange line near 0 in the figure below"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +476,15 @@
     "plt.plot(distance_13, pmf_3b_correction, label=r\"$W_\\mathrm{3B}$\")\n",
     "plt.xlabel(r\"$r_{13}=r_{23}$\")\n",
     "plt.ylabel(r\"$W$\")\n",
-    "plt.legend()"
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notice that multiple SMD runs should be conducted to get the average foward and reverse work to accurately calculate PMF \n",
+    "### For demonstration purpose, we only use one SMD run to get PMF."
    ]
   }
  ],
