--- a/fr_method/fr_demo_2b.ipynb
+++ b/fr_method/fr_demo_2b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "plt.rcParams['figure.titlesize'] = 8\n",
     "plt.rcParams['legend.fontsize'] = 8\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
-    "plt.rcParams['lines.markersize'] = 3.0\n"
+    "plt.rcParams['lines.markersize'] = 3.0"
    ]
   },
   {
@@ -54,6 +54,13 @@
    "source": [
     "TIME_CONVERSION = 0.01  # From 1 fs to 100fs (derived time unit)\n",
     "VELOCITY_CONVERSION = 1 / 0.01  # From 1 A/fs to 0.01 A/fs (=1 nm/ps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### simulation parameters"
    ]
   },
   {
@@ -96,6 +103,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create initial snapshot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -112,15 +126,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize simulation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = hoomd.device.auto_select()\n",
     "sim = hoomd.Simulation(device=device, seed=seed)\n",
     "sim.timestep = 0\n",
-    "sim.create_state_from_snapshot(snapshot)\n"
+    "sim.create_state_from_snapshot(snapshot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add LJ potential"
    ]
   },
   {
@@ -137,6 +165,13 @@
     "lj.r_cut[('A', 'A')] = r_cut\n",
     "\n",
     "forces.append(lj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add two-body SMD module "
    ]
   },
   {
@@ -158,6 +193,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NVT ensemble"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -170,12 +212,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MD integrator"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "integrator = hoomd.md.Integrator(\n",
     "    dt=dt,\n",
     "    methods=[ensemble],\n",
@@ -183,6 +231,13 @@
     "    integrate_rotational_dof=False\n",
     ")\n",
     "sim.operations += integrator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output files"
    ]
   },
   {
@@ -217,6 +272,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -248,8 +310,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load smd output files and calculation two-body PMF"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -293,8 +362,7 @@
     "plt.plot(distance, lj, label=\"LJ potential\")\n",
     "plt.plot(distance, work_fw, \"--\", label=r\"$w_F$\")\n",
     "plt.plot(distance, work_rv, \"--\", label=r\"$w_R$\")\n",
-    "plt.legend()\n",
-    "\n"
+    "plt.legend()"
    ]
   },
   {
@@ -408,6 +476,14 @@
    "outputs": [],
    "source": [
     "np.savez(\"chimes_2b.npz\", c_2b=c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notice that multiple SMD runs should be conducted to get the average foward and reverse work to accurately calculate PMF \n",
+    "### For demonstration purpose, we only use one SMD run to get PMF."
    ]
   }
  ],
